Finalized the Libraries and Library-related classes.