@@ -1,25 +1,23 @@
 package sune.app.mediadown.library;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import sune.app.mediadown.event.Event;
 import sune.app.mediadown.event.EventBindable;
 import sune.app.mediadown.event.EventRegistry;
+import sune.app.mediadown.event.LibraryEvent;
 import sune.app.mediadown.event.Listener;
 import sune.app.mediadown.util.Pair;
 import sune.util.load.ModuleLazyLoader;
 import sune.util.load.ModuleUtils;
 
+/** @since 00.02.08 */
 public final class Libraries implements EventBindable<LibraryEvent> {
 	
-	// TODO: Refactor, clean up
-	
-	// Must retain the order of insertion
+	// Use Linked version so that the order of insertion is preserved
 	private final Map<String, Library> libraries = new LinkedHashMap<>();
 	private final EventRegistry<LibraryEvent> eventRegistry = new EventRegistry<>();
 	
@@ -31,12 +29,48 @@ public final class Libraries implements EventBindable<LibraryEvent> {
 		return new Libraries();
 	}
 	
+	private final boolean load(Map<String, Library> libraries, ClassLoader loader) {
+		if(libraries == null) {
+			throw new IllegalArgumentException("Libraries cannot be null");
+		}
+		
+		boolean success = true;
+		
+		for(Library library : libraries.values()) {
+			eventRegistry.call(LibraryEvent.LOADING, library);
+			
+			String name = library.name();
+			Path path = library.path();
+			boolean loaded = false;
+			Exception exception = null;
+			
+			try {
+				loaded = ModuleLazyLoader.loadModule(path, name, loader) != null;
+			} catch(Exception ex) {
+				exception = ex;
+			}
+			
+			if(loaded) {
+				eventRegistry.call(LibraryEvent.LOADED, library);
+			} else {
+				if(exception == null) {
+					exception = new RuntimeException("Unknown exception");
+				}
+				
+				eventRegistry.call(LibraryEvent.NOT_LOADED, new Pair<>(library, exception));
+				success = false;
+			}
+		}
+		
+		return success;
+	}
+	
 	public final void add(String path) {
 		add(path, null);
 	}
 	
 	public final void add(String path, String name) {
-		add(Paths.get(path), name);
+		add(Path.of(path), name);
 	}
 	
 	public final void add(Path path) {
@@ -44,9 +78,10 @@ public final class Libraries implements EventBindable<LibraryEvent> {
 	}
 	
 	public final void add(Path path, String name) {
-		if((name == null)) {
+		if(name == null) {
 			name = ModuleUtils.automaticModuleName(path);
 		}
+		
 		libraries.put(name, new Library(name, path));
 	}
 	
@@ -54,47 +89,12 @@ public final class Libraries implements EventBindable<LibraryEvent> {
 		libraries.remove(name);
 	}
 	
-	public final Collection<Library> all() {
-		return Collections.unmodifiableCollection(libraries.values());
+	public final List<Library> all() {
+		return List.copyOf(libraries.values());
 	}
 	
-	private final boolean load(Map<String, Library> libraries) {
-		if((libraries == null))
-			throw new IllegalArgumentException("Libraries cannot be null");
-		ClassLoader loader = ClassLoader.getSystemClassLoader();
-		boolean success = true;
-		for(Library library : libraries.values()) {
-			// Notify the listener, if needed
-			eventRegistry.call(LibraryEvent.LOADING, library);
-			String  name   = library.getName();
-			Path    path   = library.getPath();
-			boolean loaded = false;
-			// Used for preserving the information about an exception, if any
-			Exception exception = null;
-			try {
-				// Load the library into the loader
-				loaded = ModuleLazyLoader.loadModule(path, name, loader) != null;
-			} catch(Exception ex) {
-				exception = ex;
-			}
-			
-			// Module was not loaded
-			if(loaded) {
-				// Notify the listener, if needed
-				eventRegistry.call(LibraryEvent.LOADED, library);
-			} else {
-				if((exception == null)) {
-					exception = new RuntimeException("Unknown exception");
-				}
-				eventRegistry.call(LibraryEvent.NOT_LOADED, new Pair<>(library, exception));
-				success = false;
-			}
-		}
-		return success;
-	}
-	
-	public final boolean load() {
-		return load(libraries);
+	public final boolean load(ClassLoader loader) {
+		return load(libraries, loader);
 	}
 	
 	@Override
